# midas

./: .gitignore  CLAUDE.md  MIDAS_Strategic_Analysis_WhatsApp_LatAm.md  README.md
apps/api-backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api-backend/migrations/: 0001_create_advisors.sql  0002_create_conversations.sql  0003_create_applications.sql  0004_create_call_recordings.sql  0005_create_advisor_phones.sql  0006_add_voip_endpoint_to_advisors.sql
apps/api-backend/src/: main.py
apps/api-backend/src/advisor/application/: use_cases.py
apps/api-backend/src/advisor/domain/: entities.py  exceptions.py  ports.py  value_objects.py
apps/api-backend/src/advisor/infrastructure/: adapters.py  api.py  auth.py  postgres_adapter.py  schemas.py  sns_adapter.py
apps/api-backend/src/application/application/: use_cases.py
apps/api-backend/src/application/domain/: entities.py  exceptions.py  ports.py  value_objects.py
apps/api-backend/src/application/infrastructure/: adapters.py  api.py  gemini_adapter.py  postgres_adapter.py  (+1 more)
apps/api-backend/tests/: test_api.py
apps/api-backend/tests/advisor/: test_application.py  test_domain.py
apps/api-backend/tests/application/: test_application.py  test_domain.py
apps/api-backend/tests/call/: test_api.py  test_application.py  test_domain.py  test_websocket.py
apps/api-backend/tests/conversation/: test_application.py  test_domain.py
apps/api-backend/tests/e2e/: test_full_flow.py
apps/api-backend/tests/intent/: test_application.py  test_domain.py  test_gemini_adapter.py  test_integration.py
(+176 files in other folders)
